tools/crates/vendor/toml_edit/tests/fixtures/invalid/bool/almost-true-with-extra.stderr
TOML parse error at line 1, column 27
  |
1 | almost-true-with-extra  = truthy
  |                           ^
invalid string
expected `"`, `'`
